include_directories(${BOOST_INCLUDE_DIRS} ${catkin_INCLUDE_DIRS})
SET(LIBSTATIC_SRC rosbagsubscriber.cpp)
ADD_LIBRARY(MOGSubsriber SHARED ${LIBSTATIC_SRC})
TARGET_LINK_LIBRARIES(MOGSubsriber MOGpoint2d ${Boost_LIBRARIES} ${catkin_LIBRARIES})
SET_TARGET_PROPERTIES(MOGSubsriber PROPERTIES LIBRARY_OUTPATH_DIRETORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})